replaced grid layout with a flex layout, fixed the overflow and scroll on card-5

--- a/src/app/pages/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/pages/admin-dashboard/admin-dashboard.component.scss
@@ -1,10 +1,36 @@
 .parent-container {
-  display: grid;
-  grid-template-columns: 21rem 1fr;
+  display: flex;
+  gap: var(--Numbers-Spacing-3XL, 1.5rem);
+  flex-direction: column;
+  // display: grid;
+  // grid-template-columns: 21rem 1fr;
   // grid-template-rows: repeat(2, 9rem) 17.5rem;
   grid-column-gap: 24px;
   grid-row-gap: 24px;
   height: 80%;
+}
+
+.first-row {
+  display: flex;
+  justify-content: space-between;
+  gap: 1.5rem;
+}
+
+.second-row {
+  display: flex;
+  gap: var(--Numbers-Spacing-3XL, 1.5rem);
+  justify-content: space-between;
+
+  .left-side {
+    display: flex;
+    flex-direction: column;
+    gap: var(--Numbers-Spacing-3XL, 1.5rem);
+    width: 30%;
+  }
+
+  .right-side {
+    width: 70%;
+  }
 }
 
 .card {
@@ -126,7 +152,8 @@
 
   
 .card-1 { 
-  grid-area: 1 / 1 / 2 / 2;
+  width: 30%;
+  // grid-area: 1 / 1 / 2 / 2;
   border-radius: var(--Numbers-Corner-Radius-Corner-Radius---Medium, 0.5rem);
   border: 1px solid var(--Colors-Brand-Colors-WinAPrize---Green---Primary-Color, #FFB951);
   background: var(--Color-White-White, #FFF);
@@ -134,10 +161,12 @@
 
 .card-2 { 
   // grid-area: 1 / 2 / 2 / 6;
+  width: 70%;
 }
 
 .card-3 { 
-  grid-area: 2 / 1 / 3 / 2;
+  // grid-area: 2 / 1 / 3 / 2;
+  width: 100%;
   border-radius: var(--Numbers-Corner-Radius-Corner-Radius---Medium, 0.5rem);
   border: 1px solid var(--colors-blue-secondary-color-s-500, #3148E4);
   background: var(--Color-White-White, #FFF); 
@@ -149,7 +178,8 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  grid-area: 3 / 1 / 4 / 2; 
+  // grid-area: 3 / 1 / 4 / 2; 
+  width: 100%;
   background: var(--Colors-Brand-Colors-WinAPrize---Blue---Secondary-Color, #1228C1);
   padding: 1.25rem;
   height: 17.5rem;
@@ -215,15 +245,17 @@
 
 
 .card-5 {
-  grid-area: 2 / 2 / 4 / 3;
+  width: 70%;
+  // grid-area: 2 / 2 / 4 / 3;
   height:  28rem;
-}
-
-.table {
-
+  overflow: hidden;
 }
 
 .table-head {
+  background-color: white;
+  // position: absolute;
+  width: 100%;
+  z-index: 100;
   display: flex;
   gap: 1rem;
   padding-top: 1rem;
@@ -257,18 +289,27 @@
 }
 
 .table-content {
-  overflow: scroll;
   padding: 1rem;
-  height: 56%;
+  overflow-y: scroll;
+  height: 25rem;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.table-content::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.table-content {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .tab-1-content {
   border-radius: 1rem;
   border: 1px solid var(--colors-boarders-strokes-boarders-strokes-mild, #D9D9D9);
-  overflow: hidden;
+  // overflow: hidden;
 }
-
-
 
 .items {
   padding: 1rem;
